--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  GOVERNMENT_REFORM_PROGRESS_IS_LESS_THAN:0 "政府改革進捗度が$PROGRESS|Y$未満\n"
  GOVERNMENT_REFORM_PROGRESS_IS_AT_LEAST:0 "政府改革進捗度が$PROGRESS|Y$以上\n"
- CHANGE_GOVERNMENT_REFORM_PROGRESS:0 "政府改革進捗度が$VALUE$$DIRECTION$\n"
+ CHANGE_GOVERNMENT_REFORM_PROGRESS:0 "政府改革進捗度を$VALUE$$DIRECTION$\n"
  SCORNFUL_DESC:0 "軽蔑的侮辱を行うと評価が2倍低下しますが、彼らの敵からの我々への評価がより上昇します。これを行うには、§Y5§!の威信を消費します。"
  SCORNFUL_ENEMIES_DESC:0 "§Y$COUNTRY$の敵§!"
  SCORNFUL:0 "軽蔑的侮辱"
@@ -51,7 +51,7 @@
  EST_VAL_FEUDALISM:0 "封建貴族: §Y$VAL$%§!"
  PROMOTE_MARATHA_NOBILITY:0 "マラーター貴族の登用"
  EST_VAL_PROMOTED_MARATHAS:0 "マラーター貴族の登用: §Y$VAL$%§!"
- rajput_tax_burden_autonomy_tooltip:0 "§Yラージプート§!が支配する州はすべて、自治率が§R15%§!増加します"
+ rajput_tax_burden_autonomy_tooltip:0 "§Yラージプート§!が支配する州はすべて、自治率が§R15%§!増加します。"
  look_up_purbias:0 "プルビア"
  desc_look_up_purbias:0 "有能なラージプート戦士を雇用するとの我々の発表により、精鋭戦士が我々の旗のもとに集結している。"
  RECRUIT_RAJPUT_GENERAL:0 "ラージプート将軍の雇用"
@@ -836,9 +836,9 @@
  NATIVE_SPONSOR_TEXT_OTHER:0 "彼らは隣国$NEIGHBOR|Y$から政府改革についていくらか学びました。"
  NATIVE_SPONSOR_LEGACY_TEXT:0 "我々は隣国$NEIGHBOR|Y$から学びました。"
  NATIVE_SPONSOR_LEGACY_TEXT_OTHER:0 "彼らは隣国$NEIGHBOR|Y$から学びました。"
- ADD_YEARS_OF_MANPOWER_SCALED_TO_SEATS:1 "議会の議席による人的資源が$MANPOWER|G0$$DIRECTION$"
- ADD_YEARS_OF_SAILORS_SCALED_TO_SEATS:1 "議会の議席による水兵が$SAILORS|G0$$DIRECTION$"
- ADD_YEARS_OF_TAX_SCALED_TO_SEATS:0 "議会の議席による税収が$TAX|G$$DIRECTION$"
+ ADD_YEARS_OF_MANPOWER_SCALED_TO_SEATS:1 "議席による人的資源を$MANPOWER|G0$$DIRECTION$"
+ ADD_YEARS_OF_SAILORS_SCALED_TO_SEATS:1 "議席による水兵を$SAILORS|G0$$DIRECTION$"
+ ADD_YEARS_OF_TAX_SCALED_TO_SEATS:0 "議席による税収を$TAX|G$$DIRECTION$"
  germanic_parliament_name:0 "ラントターク"
  GER_parliament_name:0 "ライヒスターク"
  SWE_parliament_name:0 "リクスダーゲン"
@@ -851,8 +851,8 @@
  turko_semitic_parliament_name:0 "メジュリス"
  maghrebi_parliament_name:0 "マジュリス"
  ENACT_REFORM_EFFECT_LOCK_WARNING:0 "（§R取消不可の改革。同じレベルの他の改革に変更することはできなくなります§!）\n"
- ADD_PRESTIGE_SCALED_TO_SEATS:0 "議会の議席による威信が$PRESTIGE|G$$DIRECTION$"
- ADD_MILITARIZATION_SCALED_TO_SEATS:0 "議会の議席による軍事化が$VALUE|G$$DIRECTION$"
+ ADD_PRESTIGE_SCALED_TO_SEATS:0 "議席による威信を$PRESTIGE|G$$DIRECTION$"
+ ADD_MILITARIZATION_SCALED_TO_SEATS:0 "議席による軍事化を$VALUE|G$$DIRECTION$"
  CREATE_TEAM:0 "チームを作成"
  LEAVE_TEAM:0 "チームを去る"
  REFORM_ESTATE_EFFECT:0 "§Y階級効果:§!\n"
@@ -872,7 +872,7 @@
  area:0 "地域"
  areas:0 "地域"
  AVOIDING_STRONG_ENEMY:0 "（強力な敵を避ける）"
- raise_cossack_host_tooltip:0 "これらの連隊に依存することによって安定度のコストが増加します"
+ raise_cossack_host_tooltip:0 "これらの連隊に依存することによって安定度のコストが増加します。"
  estate_maratha_disaster_tooltip:0 "これが発生したら、§Yマラータ§!階級は解放され、自身の国家を建国するだろう！"
  estate_maratha_disaster_tooltip_cossacks:0 "これが発生したら、§Yマラータ§!階級は解放され、自身の国家を建国するだろう！この新国家でプレイすることも出来ます"
  estate_rajput_disaster_tooltip:0 "これが発生したら、§Yラージプート§!階級は解放され、自身の国家を建国するだろう！"
@@ -941,8 +941,8 @@
  CHARTER_COMPANY_NO_AVAILABLE_PROVINCES:4 "我々の植民範囲内の別大陸にあり、交易会社に割り当て可能な首都でなく既に交易会社ではない州を彼らは保有していていません。"
  CHARTER_COMPANY_INDEBT:0 "勅許会社を求めることはできません。$REASON$\n"
  mechanic_has_parliament_yes:4 "§Y議会§!を有効にします。"
- COT_ADD_LEVEL_EFFECT:3 "$PROVINCE|Y$の交易中心地レベルが$DELTA|Y$増加します\n"
- COT_REMOVE_LEVEL_EFFECT:2 "$PROVINCE|Y$の交易中心地レベルが$DELTA|R$低下します\n"
+ COT_ADD_LEVEL_EFFECT:3 "$PROVINCE|Y$の交易中心地レベルが$DELTA|Y$増加\n"
+ COT_REMOVE_LEVEL_EFFECT:2 "$PROVINCE|Y$の交易中心地レベルが$DELTA|R$低下\n"
  COT_RIGHT_CLICK_TO_DOWNGRADE_SUBJECT:0 "右クリックで威信$COST|R$と引き換えに$NAME|Y$へダウングレードします。従属国が支配する交易中心地をダウングレードすると、独立欲求が§R$LIBERTY_DESIRE$%§!増加します。"
  EVTOPTE700:2 "[Root.Monarch.GetName]の最愛の親族"
  clear_delta_tooltip:0 "§Yモスク§!、§Y大モスク§!、§Y市場§!、§Y交易倉庫§!または§Y証券取引所§!がある"
