--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -863,9 +863,9 @@
  tr_state_manufactories_desc:0 "産業の歯車はさらに前方へ回転しており、新しい生産技術が利用できるようロシアは路傍に取り残されてはいけない。国は出来る限り多くの大規模工場を建設し、管理せねばならない。"
  tr_prikazy_mission_title:0 "プリカーズの設立"
  tr_prikazy_mission_desc:0 "ツァーリ一人で支配することはできない。ツァーリの支配を補佐し、政権を組織するため、国は一連の行政庁、プリカスに分けられねばならない。"
- tr_prikazy_mission.tooltip.1:0 "少なくともスキル§Y3§!の統治顧問を雇用する"
- tr_prikazy_mission.tooltip.2:0 "少なくともスキル§Y3§!の外交顧問を雇用する"
- tr_prikazy_mission.tooltip.3:0 "少なくともスキル§Y3§!の軍事顧問を雇用する"
+ tr_prikazy_mission.tooltip.1:0 "スキル§Y3§!以上の統治顧問を雇用する"
+ tr_prikazy_mission.tooltip.2:0 "スキル§Y3§!以上の外交顧問を雇用する"
+ tr_prikazy_mission.tooltip.3:0 "スキル§Y3§!以上の軍事顧問を雇用する"
  rus_integrate_perm_title:0 "ペルミの統合"
  rus_integrate_perm_desc:0 "大ペルミ公国はノヴゴロドの支配の終焉以来、多くの自治権を享受した。しかし我が国家が東方を見ている今、大ペルミ公国は完全に迎え入れなければならない。"
  rus_alaskan_colony_title:0 "アラスカの植民地化"
@@ -1466,7 +1466,7 @@
  prussian_confederation_mission_pol_desc:0 "西プロイセンの人々はチュートン騎士団の支配から解放される事を叫ぶ。自由を得るために戦う彼らの支援を行わねばならない。"
  support_confederation_tooltip:0 "プロイセン同盟を支援している"
  vassalize_danzig_tooltip:0 "ダンツィヒは我々の従属国になるでしょう"
- vij_zanzibar_tooltip:0 "5州領有せよ：\n§Y東アフリカ§!地方に所属する。\n§Y交易拠点§!がある。\n交易会社によって領有されている。"
+ vij_zanzibar_tooltip:0 "領有州5州：\n§Y東アフリカ§!地方である。\n§Y交易拠点§!がある。\n交易会社に領有されている。"
  vij_zanzibar_tooltip_2:0 "§Y東アフリカ§!地方の領有州において、その地域内に§Y交易会社倉庫§!もしくは§Y交易会社大倉庫§!の交易会社投資がある。"
  vassalize_the_teutonic_order_desc:1 "チュートン騎士団は当初、ポーランド王国の要請でプロイセンに招かれた。それ以来、彼らは問題へと変わった。騎士団は、これらの土地がポーランドの合法的な一部であることを認識しなければならない。"
  tr_dniepr_desc:1 "何世紀も昔、モンゴルのくびきの前、ドニプエルの肥沃な土地はルーシの領土の一部だった。再びそうなるだろう。"
