--- a/source/localisation/rights_of_man_l_english.yml
+++ b/source/localisation/rights_of_man_l_english.yml
@@ -512,12 +512,12 @@
  harem_events.7.d:0 "[Root.Monarch.GetName]の継承の詳細な実務が処理されていく中で、[enthronement_or_death.GetName]からの知らせが届いた。[Root.Monarch.GetHerHis]の兄弟の一人は、継承に敗れて伝統的な手順を危険にさらすよりも、むしろ戦い続けることを選択したようだ。彼の名は[enthronement_or_death.GetName]の金曜日の祈りの間に読み上げられ、短期間のうちに、新しい[Root.Monarch.GetTitle]を倒すための軍隊が集結した。"
  harem_events.7.a:0 "殺せ。皆殺しにせよ。"
  harem_events.8.t:0 "ヴァリデ・スルタンの死"
- harem_events.8.da:0 "[Root.Monarch.GetSheHe]がまだハレムにおいて若いシェフザデであった頃から、[Root.Monarch.GetName][Root.Monarch.GetHerHis]の母を[Root.Monarch.GetHerHis]のそばに置いていた。彼女は[Root.Monarch.GetHerHis]の経歴を通じて助言と保護を与え続けており、[Root.Monarch.GetSheHe]は王位に登っても[Root.Monarch.GetHerHis]の最も親密で影響力のある顧問の一人として残した。彼女が今や非常に老いた女性であったにもかかわらず、彼女の死の知らせは、親友と顧問と[Root.Monarch.GetHerHis]の母親とを一度に失った[Root.Monarch.GetTitle]に、大きな打撃を与えている。"
- harem_events.8.db:0 "彼がまだハレムにおいて若いシェフザデであった頃から、[Root.Monarch.GetName]彼の母を[Root.Monarch.GetHerHis]のそばに置いていた。彼女は[Root.Monarch.GetHerHis]の経歴を通じて助言と保護を与え続けており、[Root.Monarch.GetSheHe]は王位に登っても彼女を最も親密で影響力のある顧問の一人として残した。彼女の早すぎる死の知らせは、親友と顧問と[Root.Monarch.GetHerHis]の母親とを一度に失った[Root.Monarch.GetTitle]に、大きな打撃を与えている。"
- harem_events.8.dc:0 "[Root.Monarch.GetSheHe]がまだハレムにおいて若いシェフザデであった頃から、[Root.Monarch.GetName][Root.Monarch.GetHerHis]の母を[Root.Monarch.GetHerHis]のそばに置いていた。彼女は[Root.Monarch.GetHerHis]の経歴を通じて助言と保護を与え続けており、[Root.Monarch.GetSheHe]は王位に登っても彼女を最も親密で影響力のある顧問の一人として残した。彼女の早すぎる死の知らせは、親友と顧問と[Root.Monarch.GetHerHis]の母親とを一度に失った[Root.Monarch.GetTitle]に、大きな打撃を与えている。"
- harem_events.8.a:0 "帝国は三日間、彼女のために喪に服さねばならない。"
- harem_events.8.b:0 "彼女の記憶で慈善基金を設立するため土地を確保するべきだ！"
- waqf_for_dead_valide_sultan:0 "ヴァリデ・スルタンの思い出の基金"
+ harem_events.8.da:0 "皇子としてハレムにいた若いころから、[Root.Monarch.GetName]のそばには母親がいた。[Root.Monarch.GetSheHe]は[Root.Monarch.GetHerHis]の成長を通じて助言と保護を提供し、即位してもなお、最も親密な親友であり、最も影響力のある顧問の一人であり続けた。もうかなり高齢であったにもかかわらず、訃報は驚きであり、親友、助言者、そして母親をあまりにも早く失った[Root.Monarch.GetTitle]にとって大きな痛手となった。"
+ harem_events.8.db:0 "皇子としてハレムにいた若いころから、[Root.Monarch.GetName]のそばには母親がいた。[Root.Monarch.GetSheHe]は[Root.Monarch.GetHerHis]の成長を通じて助言と保護を提供し、即位してもなお、最も親密な親友であり、最も影響力のある顧問の一人であり続けた。早すぎる訃報は驚きであり、親友、助言者、そして母親をあまりにも早く失った[Root.Monarch.GetTitle]にとって大きな痛手となった。"
+ harem_events.8.dc:0 "皇子としてハレムにいた若いころから、[Root.Monarch.GetName]のそばには母親がいた。[Root.Monarch.GetSheHe]は[Root.Monarch.GetHerHis]の成長を通じて助言と保護を提供し、即位してもなお、最も親密な親友であり、最も影響力のある顧問の一人であり続けた。早すぎる訃報は驚きであり、親友、助言者、そして母親をあまりにも早く失った[Root.Monarch.GetTitle]にとって大きな痛手となった。"
+ harem_events.8.a:0 "帝国は三日間、喪に服さねばならない。"
+ harem_events.8.b:0 "彼女を偲び、慈善基金を設立するため土地を確保しなければ！"
+ waqf_for_dead_valide_sultan:0 "ヴァリデ・スルタン記念基金"
  desc_waqf_for_dead_valide_sultan:0 "我々は、帝国の母ヴァリデ・スルタンの思い出のモスクや炊き出しを支援するために、この州内の多数の資源から収入を確保している。"
  harem_events.9.t:0 "通過儀礼"
  harem_events.9.d:0 "古のスルタン同様、[Root.Heir.GetName]も自身の名を征服者、帝国を馬上から導く[Root.Monarch.GetTitle]として広めたがっている。[Root.Monarch.GetName]の健康が依然として良好であり、後継者を実際に戦場に連れて行くことはできないため、正夢になるのは不確実なままだ。このことは、[Root.Heir.GetName]が他のシェフザデによって嘲笑され、[Root.Heir.GetHerHis]の母親が[Root.Heir.GetHerHim]に軍の指揮権を与えるよう[Root.Monarch.GetName]に懇願するまでに至っている。\nこれは不合理な要求ではないが、我々のお気に入りの[Root.Heir.GetHerHis]の人生と手足を危険にさらそうとする動機には疑問を感じざるを得ない。"
@@ -543,12 +543,12 @@
  harem_events.14.t:0 "ヴァリ・アハドの運命"
  harem_events.14.d:0 "ヴァリ・アハドを殺すために我々送った暗殺者は、彼らの使命を果たせなかった。我々のかつての後継者は、彼に最も近い支持者の集団と共に首都から逃走し、現在、生き残るために戦う準備をしている。"
  harem_events.14.a:0 "とんでもない悲劇だ。"
- harem_events.15.t:0 "国境の王子の知事"
- harem_events.15.da:1 "我々のテュルクの遺産に倣って、我々は多くのシェフザデに帝国の周りの様々な州の知事として働くことを許した。異教徒である[enemy_neighbor_ottomans.GetAdjective]に対する現在の戦争は、[ottoman_prince_here.GetName]の王子の知事が実際に軍の指揮官及びガジとして彼の価値を証明することを可能にした。報告によると、彼は国境の反対側に戦闘を引き起こしている、彼の地域での敵軍を倒すために長い時間をかけている。忠実な者たちは彼の旗の下に群がっており、軍のエリートは注意を払うようになり、将来の継承闘争では彼を支持する可能性もある。"
- harem_events.15.db:0 "我々のテュルクの遺産に倣って、我々は多くのシェフザデに帝国の周りの様々な州の知事として働くことを許した。[enemy_neighbor_ottomans.GetAdjective]に対する現在の戦争は、[ottoman_prince_here.GetName]の王子の知事が実際に軍の指揮官及びガジとして彼の価値を証明することを可能にした。報告によると、彼は国境の反対側に戦闘を引き起こしている、彼の地域での敵軍を倒すために長い時間をかけている。新兵たちは彼の旗の下に群がっており、軍のエリートとウラマーは注意を払うようになり、将来の継承闘争では彼を支持する可能性もある。"
- harem_events.15.a:0 "彼は我々の新しいお気に入りにふさわしいことを証明している。"
- harem_events.15.b:0 "彼は自身をオスマンの真の息子であると証明している。"
- harem_events.15.b.tt:0 "§Y[Root.Heir.GetName]§!の地位は彼の競争相手が強く成長しているため、わずかに減少します。"
+ harem_events.15.t:0 "国境の知事にして皇子"
+ harem_events.15.da:1 "テュルクの遺産に倣って、我々は多くのシェフザデ（皇子）に帝国諸州の知事となることを許してきた。現在の異教徒である[enemy_neighbor_ottomans.GetAdjective]との戦争によって、[ottoman_prince_here.GetName]の知事でもある皇子は、軍司令官として、またガジとしての価値を証明することができた。報告によると、彼は自分の地域の敵軍を打ち負かすために多大な労力を費やし、国境を挟んだ反対側に戦闘を持ち込んでいる。信奉者たちは彼の旗に群がり、軍のエリートたちも注目し始めており、将来の後継者争いでは彼を支持することになるかもしれない。"
+ harem_events.15.db:0 "テュルクの遺産に倣って、我々は多くのシェフザデ（皇子）に帝国諸州の知事となることを許してきた。現在の[enemy_neighbor_ottomans.GetAdjective]との戦争によって、[ottoman_prince_here.GetName]の知事でもある皇子は、軍司令官として、またガジとしての価値を証明することができた。報告によると、彼は自分の地域の敵軍を打ち負かすために多大な労力を費やし、国境を挟んだ反対側に戦闘を持ち込んでいる。新兵たちは彼の旗に群がり、軍のエリートたちも注目し始めており、将来の後継者争いでは彼を支持することになるかもしれない。"
+ harem_events.15.a:0 "彼は我々の新たなお気に入りになるにふさわしいことを証明した。"
+ harem_events.15.b:0 "彼は自身をオスマンの真の息子であることを証明した。"
+ harem_events.15.b.tt:0 "§Y[Root.Heir.GetName]§!の地位は競争相手が強くなったため、わずかに低下する。"
  harem_events.16.t:0 "ヴァリデ・スルタンの援助"
  harem_events.16.d:0 "優先的な後継者及びヴァリ・アハドとしての[Root.Heir.GetName]の名声は、他の王子とその母親のたちの間で予想されるほどに普及していた。たとえそうであっても[Root.Heir.GetHerHis]の台頭は、望んでいたほど円滑なものとは程遠く、多くの人々がハセキ・スルタンである[Root.Consort.GetName]を非難するだろう。\nしかし、陛下である、[Root.Monarch.GetHerselfHimself]の母親のヴァリデ・スルタンは、[Root.Heir.GetName]を保護するため、破壊的な陰謀に介入する決心をした。"
  harem_events.16.a:0 "ありがとう、母よ！"
