--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -79,7 +79,7 @@
  RELIGION_CHANGE_PROV:0 "$WHERE|Y$の宗教が$NEW|Y$に変更されます。\n"
  CENTER_OF_REFORMATION:1 "$WHERE|Y$は改革の中心地となります。\n"
  REMOVE_CENTER_OF_REFORMATION:1 "$WHERE|Y$は改革の中心地ではなくなります。\n"
- CENTER_OF_REFORMATION_CENTER:2 "§Y$PROVINCE$§!は§Y$RELIGION$§!の$TYPE$です。\n近隣の州はそれがここにあり、広がることができる州がある限り徐々に§Y$RELIGION$§!に改宗されます。"
+ CENTER_OF_REFORMATION_CENTER:2 "§Y$PROVINCE$§!は§Y$RELIGION$§!の$TYPE$です。\n近隣の州は§Y$RELIGION$§!がここにあり、広がることができる州がある限り徐々に改宗されます。"
  CENTER_OF_REFORMATION_CONVERT:1 "§Y$WHERE$§Wの宗教は、近くの$TYPE|Y$によって§Y$NEW$§Wに改宗されています。\n"
  CENTER_OF_REFORMATION_POSSIBLE:2 "改革の中心地はヨーロッパの州のどこかで発生する可能性があります。"
  CENTER_OF_REFORMATION_NO_PROVINCE:0 "改革の中心地は現れないでしょう。"
@@ -572,7 +572,7 @@
  coal:0 "石炭"
  coalDESC:0 "石炭は燃料の供給源として長い歴史を持っているが、実用的な蒸気機関の発明と普及までは、需要が大きく高まることはなかった。産業革命がヨーロッパを席巻するにつれ、石炭の利用と輸出または輸入は、主要な事業となり、近代経済の不可欠な部分となるであろう。"
  NONE:0 " "
- REGIMENT_SIZE:0 "§Y$SIZE$§!人\n"
+ REGIMENT_SIZE:0 "§Y$SIZE$§!名\n"
  REGIMENT_STRENGTH:0 "連隊強度：§Y$VALUE$§W"
  CURRENT_MORALE:0 "士気：§Y$SIZE$ $STATS$§!\n"
  CURRENT_UNIT_MORALE:0 "ユニットの士気：§Y$VALUE$§W"
@@ -4860,10 +4860,10 @@
  MAPMODE_CULTURE:0 "文化"
  MAPMODE_OPINION:0 "評価"
  MAPMODE_COALITION:0 "包囲網"
- NOT_OWNED_BY:0 "以下が所有していない："
- OWNED_BY:0 "以下が所有している："
- NOT_CONTROLLED_BY:0 "以下が支配していない："
- CONTROLLED_BY:0 "支配者："
+ NOT_OWNED_BY:0 "右記が領有していない："
+ OWNED_BY:0 "右記が領有："
+ NOT_CONTROLLED_BY:0 "右記が支配していない："
+ CONTROLLED_BY:0 "右記が支配："
  default_mission_header_christian:0 "神のご意志があなたに明らかにされました："
  default_mission_header_muslim:0 "アッラーの名の下に、あなたは以下を行う必要があります："
  default_mission_header_dharmic:0 "神の名の下に、我々は以下を行う必要があります："
@@ -7035,8 +7035,8 @@
  HAVE_LEGITIMACY_MORE_THAN:0 "正統性が右記以上である："
  HAVE_HORDE_UNITY_LESS_THAN:0 "遊牧民の結束が右記未満である："
  HAVE_HORDE_UNITY_MORE_THAN:0 "遊牧民の結束が右記以上である："
- HORDE_UNITY_EFFECT:0 "遊牧民の結束が$VALUE$$DIRECTION$\n"
- LEGITIMACY_EFFECT:0 "正統性が$VALUE$$DIRECTION$\n"
+ HORDE_UNITY_EFFECT:0 "遊牧民の結束を$VALUE$$DIRECTION$\n"
+ LEGITIMACY_EFFECT:0 "正統性を$VALUE$$DIRECTION$\n"
  NO_CHANGE:0 "変化なし"
  intolerance:0 "不寛容"
  legitimacy:0 "正統性"
