--- a/source/localisation/cradle_of_civilization_l_english.yml
+++ b/source/localisation/cradle_of_civilization_l_english.yml
@@ -838,7 +838,7 @@
  STATE_JANISSARIES_GOVERNMENT_ALLOWS:0 "オスマン政府の国家のみイェニチェリを徴集できます。"
  STATE_JANISSARIES_COOLDOWN:0 "$DATE|Y$にさらにイェニチェリを募集可能です。"
  STATE_JANISSARIES_NEED_MIL_POWER:0 "イェニチェリの徴集には$AMOUNT|Y$£mil£が必要です。"
- STATE_JANISSARIES_DESC:2 "§Yオスマン政府§!であることにより、異教徒の州でイェニチェリを徴兵可能。異教徒の開発度が大きいほど、より多くのイェニチェリを引き出すことができる。"
+ STATE_JANISSARIES_DESC:2 "§Yオスマン政府§!であることにより、異教の州でイェニチェリを徴兵可能。異教徒の開発度が大きいほど、より多くのイェニチェリを引き出すことができる。"
  RELIGIOUS_SCHOOL_MAP_ICON_TOOLTIP:0 "$COUNTRY$$FLAG$は$SCHOOL|Y$に従っています。"
  DISBAND_UNIT_RETURN_MANPOWER_CAPPED:0 "最大人的資源$MAX|Y$を超えることはできないため、兵士の内、$NUMBER|Y$人だけ人的資源プールに戻ります。傭兵は戻りません。"
  CENTER_HAS_NO_PROVINCES_TO_CONVERT:0 "§R改宗完了！対象となるすべての州ですでに改宗が完了しています。§!\n"
