--- a/source/localisation/mandala_missions_l_english.yml
+++ b/source/localisation/mandala_missions_l_english.yml
@@ -354,7 +354,7 @@
  majapahit_cb_2_tt:0 "技術グループが§Y中華§!技術グループの国家に対する開戦事由§Yマジャパヒト戦役§!を有効化"
  majapahit_cb_3_tt:0 "§Y全国家§!に対する開戦事由§Yマジャパヒト戦役§!を有効化"
  buddha_deity_tt:0 "個人の主神として§Yお釈迦様§!が開放されます"
- propagate_religion_maj_tt:0 "交易方針§Y宗教の伝播§!が開放されます\n領有する州の内、宗教が§Yヒンドゥー教§!の州については、交易方針§Y宗教の伝播§!の影響を受けなくなります"
+ propagate_religion_maj_tt:0 "交易方針§Y宗教の伝播§!が開放されます\n領有州の内、宗教が§Yヒンドゥー教§!の州については、交易方針§Y宗教の伝播§!の影響を受けなくなります"
  maj_china_coast_claims_tt:0 "§Y[Root.GetName]§!は、§Y中国§!亜大陸にある§Y沿岸§!州全てに、恒久的な請求権を獲得します"
  VASSAL_MISSION_WAR_NAME_MAJ:0 "$SECOND_NAME$に対する$ORDER$$FIRST$軍事作戦"
  cb_vassalize_majapahit:0 "マジャパヒト戦役"
