--- a/source/localisation/triggers_and_effects_l_english.yml
+++ b/source/localisation/triggers_and_effects_l_english.yml
@@ -44,7 +44,7 @@
  INSTITUTION_ENABLED:0 "$WHICH|Y$が発見されている。\n"
  NOT_INSTITUTION_ORIGIN:0 "$WHICH|Y$の発祥地ではない。\n"
  INSTITUTION_ORIGIN:0 "$WHICH|Y$の発祥地である。"
- ADD_INSTITUTION_EMBRACEMENT_EFFECT:0 "$PROV$の$WHICH|Y$への支持が$VALUE$$DIRECTION$\n"
+ ADD_INSTITUTION_EMBRACEMENT_EFFECT:0 "$PROV$が$WHICH|Y$への支持を$VALUE$$DIRECTION$\n"
  HAS_MERCHANT_TRIGGER:1 "$WHO|Y$の商人が$WHERE|Y$にいる。\n"
  HAS_NOT_MERCHANT_TRIGGER:0 "$WHO|Y$の商人が$WHERE|Y$にいない。\n"
  HAS_NOT_DISASTER:0 "$NAME|Y$にない。\n"
@@ -176,10 +176,10 @@
  HAVE_MORE_THAN_SPLENDOR:0 "栄光が右記以上："
  HAVE_LESS_THAN_ABSOLUTISM:0 "絶対主義が右記未満："
  HAVE_MORE_THAN_ABSOLUTISM:0 "絶対主義が右記以上："
- HAVE_LESS_THAN_ACCEPTED_CULTURES:1 "登用された文化の数が右記未満："
- HAVE_MORE_THAN_ACCEPTED_CULTURES:2 "登用された文化の数が$VAL|Y$以上である\n"
- OWN_CONTROL_LESS_INSTITUTIONS:0 "領有している制度発祥地の数が$TXT$未満\n"
- OWN_CONTROL_AT_LEAST_INSTITUTIONS:0 "領有している制度発祥地の数が$TXT$以上\n"
+ HAVE_LESS_THAN_ACCEPTED_CULTURES:1 "登用された文化が右記未満："
+ HAVE_MORE_THAN_ACCEPTED_CULTURES:2 "登用された文化が$VAL|Y$以上\n"
+ OWN_CONTROL_LESS_INSTITUTIONS:0 "領有・支配している制度発祥地が$TXT$未満\n"
+ OWN_CONTROL_AT_LEAST_INSTITUTIONS:0 "領有・支配している制度発祥地が$TXT$以上\n"
  HASNT_3_STAR_TR:0 "三つ星の司令官が指揮していない"
  HAS_3_STAR_TR:0 "指揮している三つ星の将軍または提督がいる"
  HAS_UNIFIED_CUL:0 "$WHICH|Y$の州をすべて統治している"
@@ -643,7 +643,7 @@
  ENABLE_COUNCIL_OF_TRENT:0 "§Yトリエント公会議§!の始まり\n"
  DISABLE_COUNCIL_OF_TRENT:0 "§Yトリエント公会議§!の終わり\n"
  HAVE_LESS_OWNED_AREAS_THAN:0 "地域が$VALUE|Y$未満である"
- HAVE_MORE_OWNED_AREAS_THAN:0 "地域の数が$VALUE|Y$以上である"
+ HAVE_MORE_OWNED_AREAS_THAN:0 "地域の数が$VALUE|Y$以上"
  HAS_NOT_FEATURE_ALLOWING:1 "「$WHICH$」を可能にする機能がない。\n"
  HAS_FEATURE_ALLOWING:1 "「$WHICH$」を可能にする機能がある。\n"
  TOTAL_HAS_NOT_MORE_PRIVATEERS:0 "$WHERE|Y$における私掠船が交易力の§Y$VAL$§!未満である。"
