--- a/source/localisation/nw_l_english.yml
+++ b/source/localisation/nw_l_english.yml
@@ -151,7 +151,7 @@
  NOT_ALL_PROVINCES_IN_COLONIAL_REGION:0 "$REGION$地方の全州ではない"
  LIBERTY_EFFECT:0 "独立欲求を$PERC$$DIRECTION$\n"
  TARIFF_VALUE_EFFECT:0 "関税額を$PERC$$DIRECTION$\n"
- ADD_LOCAL_AUTONOMY_EFFECT:0 "$WHERE$の自治率が$PERC$$DIRECTION$\n"
+ ADD_LOCAL_AUTONOMY_EFFECT:0 "$WHERE$の自治率を$PERC$$DIRECTION$\n"
  SET_LOCAL_AUTONOMY_EFFECT:0 "$WHERE|Y$の自治率を$VALUE|Y$に設定します。\n"
  IS_NOT_CLIENT_OF:0 "以下の衛星国ではない："
  IS_CLIENT_OF:0 "以下の衛星国である："
