--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -458,7 +458,7 @@
  HAVE_THE_ACTIVE_PROVINCE_MODIFIER:0 "州補正が有効"
  DONT_HAVE_THE_ACTIVE_PROVINCE_MODIFIER:0 "州補正が無効"
  READ_MORE:0 "続きを読む"
- IS_CAPITAL_OF:1 "$PROVINCE|Y$は$COUNTRY|Y$の首都である\n"
+ IS_CAPITAL_OF:1 "$PROVINCE|Y$が$COUNTRY|Y$の首都\n"
  IS_NOT_CAPITAL_OF:1 "$PROVINCE|Y$は$COUNTRY|Y$の首都ではない\n"
  NO_CONFORM_TO_TEMPLATE_MOVE_LOCKED:0 "§R動きがロックされている間、陸軍をテンプレートに適合させることはできません。§!"
  NO_CONFORM_TO_TEMPLATE_MOVE_LOCKED_NAVY:0 "§R動きがロックされている間、艦隊をテンプレートに適合させることはできません。§!"
