--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -105,20 +105,20 @@
  ADD_IDEA:0 "§Y$NEW$§Wを新たなアイデアとして採用します。\n"
  REM_IDEA:0 "§Y$LOSE$§Wがアイデアから外されます。\n"
  GOV_CHANGE:0 "政体が§Y$GOV$§Wに変更されます。\n"
- TECH_INVEST:0 "$TECH$への投資が$VALUE$$DIRECTION$\n"
+ TECH_INVEST:0 "$TECH$への投資を$VALUE$ダカット$DIRECTION$\n"
  GROUP_CHANGE:0 "技術グループが§Y$GROUP$§Wへと変更されます。\n"
  CHANGE_TAG:0 "§Y$NEW$§Wになります。\n"
  SET_GOVERNMENT_RANK:0 "$WHO$の政府ランクが$RANK$に変わります。"
  SET_GOVERNMENT_AND_RANK:0 "$WHO|Y$の政体が$GOV|Y$に変わります。政府ランクは$RANK|Y$です。\n"
  CREATE_REVOLT:0 "§R$SIZE$§W個連隊規模の反乱が§Y$WHERE$§Wで発生します。\n"
  CREATE_PIRATE:0 "§R$SIZE$§W隻の海賊が§Y$WHERE$§Wに姿を現しました。\n"
- NATIVE_FEROCITY:0 "$WHERE$の原住民の獰猛性が$VALUE$$DIRECTION$"
- NATIVE_HOSTILENESS:0 "$WHERE$の原住民の攻撃性が$VALUE$$DIRECTION$"
- NATIVE_SIZE:0 "$WHERE$の原住民の規模が$VALUE$$DIRECTION$"
- CHANGE_BASE_TAX:0 "$WHERE$の基本税が$VALUE$$DIRECTION$\n"
- CHANGE_BASE_PROD:0 "$WHERE$の基本生産が$VALUE$$DIRECTION$\n"
- CHANGE_BASE_MP:0 "$WHERE$の基本人的資源が$VALUE$$DIRECTION$\n"
- COLONYSIZE:0 "$WHERE$の人口が$VALUE$$DIRECTION$\n"
+ NATIVE_FEROCITY:0 "$WHERE$の原住民が獰猛性を$VALUE$$DIRECTION$"
+ NATIVE_HOSTILENESS:0 "$WHERE$の原住民が攻撃性を$VALUE$$DIRECTION$"
+ NATIVE_SIZE:0 "$WHERE$の原住民が規模を$VALUE$$DIRECTION$"
+ CHANGE_BASE_TAX:0 "$WHERE$の基本税を$VALUE$$DIRECTION$\n"
+ CHANGE_BASE_PROD:0 "$WHERE$の基本生産を$VALUE$$DIRECTION$\n"
+ CHANGE_BASE_MP:0 "$WHERE$の基本人的資源を$VALUE$$DIRECTION$\n"
+ COLONYSIZE:0 "$WHERE$の人口を$VALUE$$DIRECTION$\n"
  MISSIONARIES:0 "宣教師を$VALUE$$DIRECTION$\n"
  MERCHANTS:0 "商人を$VALUE$$DIRECTION$\n"
  COLONISTS:0 "植民者を$VALUE$$DIRECTION$\n"
@@ -127,7 +127,7 @@
  HRE_STATUS:0 "§Y$WHERE$§Wは神聖ローマ帝国の一部$DIRECTION$\n"
  BECOME:0 "になります"
  NOLONGER:0 "ではなくなります"
- PROV_MANPOWER:0 "$WHERE$の人的資源が$VALUE$$DIRECTION$\n"
+ PROV_MANPOWER:0 "$WHERE$の人的資源を$VALUE$$DIRECTION$\n"
  DISCOVER:0 "$WHERE|Y$を発見します。\n"
  ADD_BUILDING:0 "$WHERE|Y$で$NAME|Y$を獲得します。\n"
  REM_BUILDING:0 "$WHERE|Y$で$NAME|R$を失います。\n"
@@ -4028,8 +4028,8 @@
  NUM_BLOCKADING_LESS_THAN_COMP:0 "$COUNTRYNAME|Y$（$BLOCKADEDCOUNT|Y$）より少ない港を封鎖している。現在$CURRENTBLOCKADES|Y$。"
  HAVE_LESS_MANPOWER_THAN:0 "人的資源が右記未満である："
  HAVE_MORE_MANPOWER_THAN:0 "人的資源が右記以上である："
- HAVE_LESS_SAILORS_THAN:2 "水兵の数が$AMOUNT|Y0$未満である"
- HAVE_MORE_SAILORS_THAN:2 "水兵の数が$AMOUNT|Y0$以上である"
+ HAVE_LESS_SAILORS_THAN:2 "水兵が$AMOUNT|Y0$未満"
+ HAVE_MORE_SAILORS_THAN:2 "水兵が$AMOUNT|Y0$以上"
  HAVE_LESS_LOANS_THAN:0 "借金の数が右記未満である："
  HAVE_MORE_LOANS_THAN:0 "借金の数が右記以上である："
  HAVE_LESS_COT_THAN:0 "交易中心地の数が右記未満である："
@@ -4133,20 +4133,20 @@
  NUM_OF_SUBJECTS:0 "従属国の数"
  USE_DEVOTION:0 "信仰を使用している"
  IMPORTANT_WAR:0 "重要な戦争中である"
- HAVE_LESS_INFANTRY_THAN:2 "歩兵が$COUNTRY|Y$（$NUM|Y$）より少ない"
- HAVE_MORE_INFANTRY_THAN:2 "歩兵が$COUNTRY|Y$（$NUM|Y$）以上である"
- HAVE_LESS_CAVALRY_THAN:2 "騎兵が$COUNTRY|Y$（$NUM|Y$）より少ない"
- HAVE_MORE_CAVALRY_THAN:2 "騎兵連隊が$COUNTRY|Y$（$NUM|Y$）以上である"
- HAVE_LESS_ARTILLERY_THAN:2 "砲兵が$COUNTRY|Y$（$NUM|Y$）より少ない"
- HAVE_MORE_ARTILLERY_THAN:2 "砲兵が$COUNTRY|Y$（$NUM|Y$）以上である"
- HAVE_LESS_BIG_SHIPS_THAN:2 "大型船が$COUNTRY|Y$（$NUM|Y$）より少ない"
- HAVE_MORE_BIG_SHIPS_THAN:2 "大型船が$COUNTRY|Y$（$NUM|Y$）以上である"
- HAVE_LESS_LIGHT_SHIPS_THAN:1 "小型船が$COUNTRY|Y$（$NUM|Y$）より少ない"
- HAVE_MORE_LIGHT_SHIPS_THAN:2 "小型船が$COUNTRY|Y$（$NUM|Y$）以上である"
- HAVE_LESS_GALLEYS_SHIPS_THAN:2 "ガレー船が$COUNTRY|Y$（$NUM|Y$）より少ない"
- HAVE_MORE_GALLEYS_SHIPS_THAN:2 "ガレー船が$COUNTRY|Y$（$NUM|Y$）以上である"
- HAVE_LESS_TRANSPORTS_THAN:2 "輸送船が$COUNTRY|Y$（$NUM|Y$）より少ない"
- HAVE_MORE_TRANSPORTS_THAN:2 "輸送船が$COUNTRY|Y$（$NUM|Y$）以上である"
+ HAVE_LESS_INFANTRY_THAN:2 "歩兵が$COUNTRY|Y$（$NUM|Y$）未満"
+ HAVE_MORE_INFANTRY_THAN:2 "歩兵が$COUNTRY|Y$（$NUM|Y$）以上"
+ HAVE_LESS_CAVALRY_THAN:2 "騎兵が$COUNTRY|Y$（$NUM|Y$）未満"
+ HAVE_MORE_CAVALRY_THAN:2 "騎兵連隊が$COUNTRY|Y$（$NUM|Y$）以上"
+ HAVE_LESS_ARTILLERY_THAN:2 "砲兵が$COUNTRY|Y$（$NUM|Y$）未満"
+ HAVE_MORE_ARTILLERY_THAN:2 "砲兵が$COUNTRY|Y$（$NUM|Y$）以上"
+ HAVE_LESS_BIG_SHIPS_THAN:2 "大型船が$COUNTRY|Y$（$NUM|Y$）未満"
+ HAVE_MORE_BIG_SHIPS_THAN:2 "大型船が$COUNTRY|Y$（$NUM|Y$）以上"
+ HAVE_LESS_LIGHT_SHIPS_THAN:1 "小型船が$COUNTRY|Y$（$NUM|Y$）未満"
+ HAVE_MORE_LIGHT_SHIPS_THAN:2 "小型船が$COUNTRY|Y$（$NUM|Y$）以上"
+ HAVE_LESS_GALLEYS_SHIPS_THAN:2 "ガレー船が$COUNTRY|Y$（$NUM|Y$）未満"
+ HAVE_MORE_GALLEYS_SHIPS_THAN:2 "ガレー船が$COUNTRY|Y$（$NUM|Y$）以上"
+ HAVE_LESS_TRANSPORTS_THAN:2 "輸送船が$COUNTRY|Y$（$NUM|Y$）未満"
+ HAVE_MORE_TRANSPORTS_THAN:2 "輸送船が$COUNTRY|Y$（$NUM|Y$）以上"
  HAVE_LESS_INFANTRY_FRACTION_THAN:0 "歩兵の割合が右記未満である："
  HAVE_MORE_INFANTRY_FRACTION_THAN:0 "歩兵の割合が右記以上である："
  HAVE_LESS_CAVALRY_FRACTION_THAN:0 "騎兵の割合が右記未満である："
@@ -4246,10 +4246,10 @@
  IS_NEIGHBOUR_WITH:0 "以下と隣接している："
  HAVE_LESS_UNITS_IN_THAN:0 "$PROVINCE$のユニットが右記未満である："
  HAVE_MORE_UNITS_IN_THAN:0 "$PROVINCE$のユニットが右記以上である："
- HAVE_MORE_THAN_GALLEYS_IN:0 "$PROVINCE$に少なくとも$UNITS$のガレー船を持っている"
- HAVE_LESS_THAN_GALLEYS_IN:0 "$PROVINCE$のガレー船が$UNITS$未満である"
- HAVE_MORE_THAN_INFANTRY_IN:0 "$PROVINCE$に少なくとも$UNITS$の歩兵を持っている"
- HAVE_LESS_THAN_INFANTRY_IN:0 "$PROVINCE$の歩兵が$UNITS$未満である"
+ HAVE_MORE_THAN_GALLEYS_IN:0 "$PROVINCE$のガレー船が$UNITS$隻以上"
+ HAVE_LESS_THAN_GALLEYS_IN:0 "$PROVINCE$のガレー船が$UNITS$隻未満"
+ HAVE_MORE_THAN_INFANTRY_IN:0 "$PROVINCE$の歩兵が$UNITS$以上"
+ HAVE_LESS_THAN_INFANTRY_IN:0 "$PROVINCE$の歩兵が$UNITS$未満"
  IS_AT_PEACE_WITH:0 "右記と戦争中ではない："
  IS_AT_WAR_WITH:0 "右記と戦争中である："
  IS_AT_WAR:0 "$WHO$は戦争中です。"
@@ -4707,7 +4707,7 @@
  TOLERANCE_TO_RELIGION_LESS_THAN:0 "宗教への寛容度が右記未満である："
  TOLERANCE_TO_RELIGION_GREATER_THAN:0 "宗教への寛容度が右記以上である："
  ANY_KNOWN_COUNTRY_STARTS:0 "いずれかの既知の国家"
- EXTRA_NATIONALISM_DESC:0 "$WHERE$の分離主義の年数が$VALUE$年$DIRECTION$\n"
+ EXTRA_NATIONALISM_DESC:0 "$WHERE$の分離主義の年数を$VALUE$年$DIRECTION$\n"
  MODIFIER_TOLERANCE_OWN:0 "真の信仰の寛容度"
  MODIFIER_TOLERANCE_HERETIC:0 "異端の寛容度"
  MODIFIER_TOLERANCE_HEATHEN:0 "異教徒の寛容度"
@@ -7955,7 +7955,7 @@
  LEADER_NAME:0 "指揮官名"
  CANT_PROMOTE_ADVISOR_MAX_SKILL:0 "これ以上この顧問を昇進させることはできません。"
  CANT_PROMOTE_ADVISOR_NO_FUNDS:0 "この顧問を昇進させる余裕はありません。§Y$PROMOTE_COST$§W¤のコストがかかります。"
- CANT_PROMOTE_ADVISOR_WRONG_CULTURE:2 "この顧問を昇進させることはできません。\nこのアドバイザーの文化は、あなたの登用した文化の一つではありません。"
+ CANT_PROMOTE_ADVISOR_WRONG_CULTURE:2 "この顧問を昇進させることはできません。\nこの顧問の文化は、あなたが登用した文化ではありません。"
  PROMOTE_ADVISOR:1 "この顧問を昇進させます。\nこれには§Y$PROMOTE_COST$§W¤のコストがかかり、給料が月§Y$NEW_WAGE_COST$§W¤に増える代わりに、この顧問のスキルを恒久的に§G1§W向上させます。"
  CONFIRM_PROMOTE_ADVISOR:0 "あなたの顧問である$NAME$を§Y$PROMOTE_COST$§W¤のコストで昇進させてもよろしいですか？これは、この顧問のスキルを恒久的に§G1§W向上させます。"
  CONFIRM_PROMOTE_ADVISOR_TITLE:0 "顧問の昇進"
@@ -8046,8 +8046,8 @@
  CONVERT_RULER_NOT_POSSIBLE_IRO:1 "統治者は既に指揮官になっています。"
  GLOBAL_SUPPLY_LIMIT_MODIFIER:0 "国家供給限界補正"
  austrian_jaeger:1 "イェーガー歩兵"
- AVERAGE_EFFECTIVE_REVOLT_RISK_LOWER_THAN:3 "不穏度がある州の平均不穏度が$NUMBER|Y$未満（現在：$CURRENT$）である"
- AVERAGE_EFFECTIVE_REVOLT_RISK_HIGHER_THAN:3 "不穏度がある州の平均不穏度が$NUMBER|Y$以上（現在：$CURRENT$）である"
+ AVERAGE_EFFECTIVE_REVOLT_RISK_LOWER_THAN:3 "不穏度がある州の平均不穏度が$NUMBER|Y$未満（現在：$CURRENT$）"
+ AVERAGE_EFFECTIVE_REVOLT_RISK_HIGHER_THAN:3 "不穏度がある州の平均不穏度が$NUMBER|Y$以上（現在：$CURRENT$）"
  IS_NOT_IN_THE_REGION:1 "が次の領域内にない："
  IS_NOT_IN_THE_AREA:1 "が次の地域内にない："
  IS_IN_REGION:1 "が次の領域内にある："
