--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -1068,7 +1068,7 @@
  IMPREF_DYNASTY:0 "$WHO$王朝に属している：$VAL$\n"
  IMPREF_OPINION:0 "皇帝の評価：$VAL$\n"
  IMPREF_HERETIC:0 "異端：$VAL$\n"
- IMPREF_HEATHEN:0 "$NAME$: $VAL$\n"
+ IMPREF_HEATHEN:0 "$NAME$：$VAL$\n"
  IMPREF_OFFICIAL_FAITH:0 "$NAME$は公式の信仰である：$VAL$\n"
  IMPREF_JUNIOR:0 "$WHO$に忠誠を負っている：$VAL$\n"
  IMPREF_OVERLORD_VOTING_NO:0 "宗主国は改革に反対している：$VAL$\n"
@@ -1325,8 +1325,8 @@
  CVIEW_HORDE_UNITY_DESC:1 "遊牧民の結束は、ハーンが部族からどのくらいの支持を得ているかの尺度です。それは時間が経つにつれて減少し、§Y略奪し破壊された州§!で増加します。低い結束を持つ集団は内紛に屈する可能性が高くなります。"
  YOU_HORDE_UNITY_EFFECTS:0 "§Y現在の遊牧民の結束からの影響：§!"
  THEY_HORDE_UNITY_EFFECTS:0 "§Y彼らの現在の遊牧民の結束からの影響：§!"
- NO_MIL_COST_MAINT:2 "この指揮官は維持費として§G0§!$TYPE$のコストがかかります。\n"
- MIL_COST_MAINT:2 "この指揮官は、維持費として毎月$COST|Y$$TYPE$のコストがかかります。我が国には指揮官が$CURR|Y$人おり、維持費なしで$ALLOW|Y$人持つことができます。\n"
+ NO_MIL_COST_MAINT:2 "この指揮官は維持費として§G0§!$TYPE$ のコストがかかります。\n"
+ MIL_COST_MAINT:2 "この指揮官は、維持費として毎月$COST|Y$$TYPE$ のコストがかかります。我が国には指揮官が$CURR|Y$人おり、維持費なしで$ALLOW|Y$人持つことができます。\n"
  MODIFIED_BY_TAX_TT:0 "補正x§Y$MOD$§!、以下の理由\n"
  MONTHS_OF_RULING_TRIG_NOT:0 "$WHO$が§Y$MONTHS$§Wヶ月未満統治している。\n"
  MONTHS_OF_RULING_TRIG:0 "$WHO$が§Y$MONTHS$§Wヶ月以上統治している。\n"
@@ -2744,7 +2744,7 @@
  TRADE_GOODS_ONMAP:0 "$GOODS|G$ \n交易品生産：$PRODUCED|Y2$\n交易価値：$VALUE|Y2$\n交易力：$TRADE|Y2$"
  TRADE_GOODS_ONMAP_UNKNOWN_1:0 "交易可能品："
  TRADE_GOODS_ONMAP_UNKNOWN_2:0 "交易品生産：$PRODUCED|Y2$\n交易価値：$VALUE|Y2$\n交易力：$TRADE|Y2$"
- POSSIBLE_TRADEGOOD_ENTRY:0 "$TRADE|G$: §Y$VALUE|2$%§W"
+ POSSIBLE_TRADEGOOD_ENTRY:0 "$TRADE|G$：§Y$VALUE|2$%§W"
  UNIT_ON_HOLD:0 "他のユニットの建設が指示されているため、この生産は保留されています。"
  UNIT_RELOCATION:0 "このユニットは§Y$PROVINCE$§!に移動しています。§Y$DATE$§!に到着します。"
  UNIT_RELOCATION_BLOCKADED:0 "このユニットは§Y$PROVINCE$§!に移動しています。この移動の進行は現在、封鎖により保留されています。"
