--- a/source/localisation/cradle_of_civilization_l_english.yml
+++ b/source/localisation/cradle_of_civilization_l_english.yml
@@ -192,12 +192,12 @@
  IS_NOT_NODE_IN_TRADE_COMPANY_REGION:0 "交易ノードが交易会社地域内にある"
  drilling_armies:0 "軍の訓練"
  ARMY_DRILL:0 "訓練度"
- UNIT_DRILL_DESC:0 "これは連隊の平均訓練度です。軍の訓練によって訓練度が増加し、戦闘での連隊の技能が向上します。それは時間の経過とともに減衰し、ユニットを補充することで減少します。\n"
+ UNIT_DRILL_DESC:0 "連隊の平均訓練度です。訓練度は軍の訓練によって増加し、連隊の戦闘技能が向上します。一方で時間経過とともに減衰し、ユニットの補充でも減少します。\n"
  UNIT_DRILL_FAST_DESC:0 "この軍は、最大$MAX|Y$のうち、平均して$CURRENT|Y$の訓練度を持っています。"
  SUBUNIT_AVERAGE_DRILL_EFFECTS:0 "平均して、非傭兵連隊に以下を与えます：\n"
  UNIT_DRILL_EFFECTS:1 "平均的な訓練度はまた、我々に軍全体に対するこれらのボーナスを与えます：\n"
  SUBUNIT_DRILL_FAST_DESC:0 "この連隊は、最大$MAX|Y$のうち、平均して$CURRENT|Y$の訓練度を持っています。"
- SUBUNIT_DRILL_DESC:2 "この連隊は現在訓練中であり、毎月$INC|G$訓練度が増加しています：\n"
+ SUBUNIT_DRILL_DESC:2 "この連隊は現在訓練中で、訓練度が毎月$INC|G$増加しています：\n"
  SUBUNIT_NO_DRILL_DESC:1 "訓練度は毎月$DEC|R$ずつ減衰します。\n軍の訓練を開始すれば増加します。\n"
  SUBUNIT_DRILL_EFFECTS:0 "$DRILL|Y$の訓練度から：\n"
  MODIFIER_DRILL_GAIN_MODIFIER:1 "訓練度上昇補正"
