--- a/source/localisation/origins_l_english.yml
+++ b/source/localisation/origins_l_english.yml
@@ -966,7 +966,7 @@
  eth_find_other_christians_ct:0 "イベント「§Yペロ・ダ・コヴィリャン§!」が発生済み。"
  eth_find_other_christians_tt:0 "[Root.GetName]が任意の§Y[POR.GetName]§!の領有州を発見している。"
  eth_market_of_the_west_title:0 "西洋の市場"
- eth_market_of_the_west_desc:1 "かつて紅海交易は世界で最も重要な交易地点の一つだった。ローマ帝国とインドの富を結び、それによってローマ人は厄介者のペルシャ人を相手にすることなく、インドの交易品を享受できた。しかし、その継承者であるビザンツ帝国がオスマン・トルコに滅ぼされると、状況は一変した。それ以来、紅海はもはやかつてのような利益を得ることができなくなった。ーそして、ヨーロッパ人の植民地主義によって、もう二度とそうなることはないだろう。\nしかし、まだ選択肢はある。ヨーロッパ人と新しくつながりを築いたおかげで、ヨーロッパ人のより活発な交易地点にいることは可能となっている。後はどうにかしてヨーロッパ人の豊かな市場にたどり着くだけだ。"
+ eth_market_of_the_west_desc:1 "かつて紅海交易は世界で最も重要な交易地点の一つだった。ローマ帝国とインドの富を結び、それによってローマ人は厄介者のペルシャ人を相手にすることなく、インドの交易品を享受できた。しかし、その継承者であるビザンツ帝国がオスマンに滅ぼされると、状況は一変した。それ以来、紅海はもはやかつてのような利益を得ることができなくなった。ーそして、ヨーロッパ人の植民地主義によって、もう二度とそうなることはないだろう。\nしかし、まだ選択肢はある。ヨーロッパ人と新しくつながりを築いたおかげで、ヨーロッパ人のより活発な交易地点にいることは可能となっている。後はどうにかしてヨーロッパ人の豊かな市場にたどり着くだけだ。"
  eth_ideas_and_institutions_title:0 "西洋の思想"
  eth_ideas_and_institutions_desc:1 "宗教や文化は、自文明にとって最も重要な側面である。技術は正直あまり気にしていなかった。\nヨーロッパ人の能力を知るまでは。ヨーロッパとの交易関係により、商人たちはヨーロッパ人の技術力を身を持って体感できた。特に彼らの軍事面での技術的成果は、自国の商人たちに大きな感銘を与え、自国を不安に陥れた。いかなるヨーロッパ諸国にも先頭を譲らぬようにせねばならない。"
  has_better_tech_than_westerns_tt:0 "全ての技術において、§Y[Root.GetName]§!に比べ進んでいる§Y西ヨーロッパ§!の国家が存在しない。"
