--- a/source/localisation/triggers_and_effects_l_english.yml
+++ b/source/localisation/triggers_and_effects_l_english.yml
@@ -47,7 +47,7 @@
  ADD_INSTITUTION_EMBRACEMENT_EFFECT:0 "$PROV$が$WHICH|Y$への支持を$VALUE$$DIRECTION$\n"
  HAS_MERCHANT_TRIGGER:1 "$WHO|Y$の商人が$WHERE|Y$にいる。\n"
  HAS_NOT_MERCHANT_TRIGGER:0 "$WHO|Y$の商人が$WHERE|Y$にいない。\n"
- HAS_NOT_DISASTER:0 "$NAME|Y$にない。\n"
+ HAS_NOT_DISASTER:0 "$NAME|Y$中ではない。\n"
  HAS_DISASTER:0 "現在、$NAME|Y$にある。\n"
  HAS_CUSTOM_IDEAS:0 "カスタム国家アイデアを採用している。\n"
  HAS_NOT_CUSTOM_IDEAS:0 "カスタム国家アイデアを採用していない。\n"
