Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -777,7 +777,7 @@
  IMPPR_COLONY:0 "$NAME$はまだ植民地なので、$ACTION|Y$することはできません。"
  IMPPR_NOTCORE:0 "$NAME$はまだ中核州ではないので、$ACTION|Y$することはできません。"
  IMPPR_NOTCORE_SUBJECT:0 "$NAME$は我々の従属国の中核州の一つではないので、まだそこでは$ACTION|Y$することはできません。"
- IMPPR_NOT_ENOUGH_POWER:0 "§R$NAME$での$ACTION$に必要な$POWER|Y$の$TYPE$点を持っていません。§!"
+ IMPPR_NOT_ENOUGH_POWER:0 "§R$NAME$での$ACTION$に必要な$POWER|Y$の$TYPE$力を持っていません。§!"
  IMPPR_DO:1 "$NAME$で$TYPE$力$COST|Y$を払って$ACTION$を§G+$AMOUNT$§!すると、以下の効果が得られます：\n$EFFECT$\n  直轄地：$CROWNLAND|+=&1$"
  IMPROVED_COUNT_TRIGGER_LESS:1 "開発回数が$VAL|Y$回未満\n"
  IMPROVED_COUNT_TRIGGER_AT_LEAST:1 "開発回数が$VAL|Y$回以上\n"
@@ -851,7 +851,7 @@
  PIRATE_HUNT_MOVEMENT_LOCKED:0 "目的地がすでに設定されている場合は、艦隊を派遣して海賊狩りを行うことはできません。目的地に到着するまで待ってください。"
  COL_MERCH_BONUS:0 "少なくとも$SIZE|Y$都市を持っていることにより、それは我々に商人のボーナスを提供します。"
  COL_MERCH_BONUS_SMALL:0 "この植民地国家は小さすぎてボーナスの商人を提供してくれません。彼らは$SIZE|Y$都市を支配する必要がありますが、現在$CURR|R$都市しか持っていません。"
- BUILD_POWER_DESC2:0 "このアイデアの採用には$VAL|Y$の$TYPE$点が必要です。"
+ BUILD_POWER_DESC2:0 "このアイデアの採用には$VAL|Y$の$TYPE$力が必要です。"
  IDEAS_MORE_EXPENSIVE:0 "同じカテゴリのアイデアグループの半分以上のアイデアを有することで、よりコストがかかるようになります：\n$NAME$：$IMPACT|+$"
  IDEA_GROUP_STACKING_WARNING:0 "同じカテゴリのアイデアグループの半分以上のアイデアを有することで、それはよりコストがかかるようになります。"
  REBELSUPP_FACTION_LIST:0 "$VAL$州"
@@ -1440,7 +1440,7 @@
  ONLY_SEIZE_ENEMY:0 "奪うことができるのは敵の州のみです！"
  SEIZE_NEED_CONTROL:0 "奪うには、この州を支配する必要があります。"
  NOSC_NO_POINTS:0 "植民地を奪うには§Y$COST$§W£mil£が必要ですが、§Y$VAL$§!しか持っていません。"
- UNIT_SEIZE_COLONY:0 "§Y植民地を奪う§!"
+ UNIT_SEIZE_COLONY:0 "§Y植民地の奪取§!"
  SEIZE_COLONY_DESC:0 "§Y$COST$§!£mil£で、この植民地または原住民の都市の恒久的な支配権を奪います。"
  NOT_BURN_IN_COMBAT:0 "戦闘中に植民地を焼き払うことはできません。"
  ONLY_BURN_ENEMY:0 "敵の植民地のみ焼き払うことができます。"
@@ -1453,7 +1453,7 @@
  NO_NATIVES_ON_OTHER:0 "これは我々の土地ではなく、ここの原住民は保護下にあります。"
  NO_NATIVES_MOVING:0 "移動中に原住民を攻撃することはできません。"
  NONA_NO_POINTS:0 "原住民を攻撃するには§Y$COST$§W£mil£が必要ですが、§Y$VAL$§Wしか持っていません。"
- UNIT_ATTACK_NATIVS:0 "§Y原住民を攻撃§!"
+ UNIT_ATTACK_NATIVS:0 "§Y原住民への攻撃§!"
  UNIT_ATTACK_NATIVES_DESC:0 "あなたの植民者を後に攻撃する脅威を排除するため、地元の人々を攻撃します。"
  ATTACK_NATIVES_COST:0 "これには§Y$COST$§!£mil£のコストがかかります。"
  NO_SCORCH_HI_DEVASTATION:2 "荒廃度が$VAL|$を超えて荒廃している州を焦土化することはできません。"
@@ -1841,8 +1841,8 @@
  PRIMITIVES_CANT_BUY_SHIPS:0 "未開国は船を購入できません。"
  CV_TECH_RESEARCH_MAXED:0 "このグループの技術はすべて研究済みです。"
  CV_RESEARCH_TECH:0 "$NAME$の技術研究"
- CV_RESEARCH_TECH_DESC:0 "$NAME$の研究には$TYPE$点が§Y$POWER_COST$§!かかります。"
- CV_RESEARCH_TECH_NOPOWER:0 "このレベルの研究に十分な$TYPE$点がありません！§Y$POWER_COST$§!が必要なところ、現在§Y$POWER_AVAILABLE$§!です。"
+ CV_RESEARCH_TECH_DESC:0 "$NAME$の研究には$TYPE$力が§Y$POWER_COST$§!かかります。"
+ CV_RESEARCH_TECH_NOPOWER:0 "このレベルの研究に十分な$TYPE$力がありません！§Y$POWER_COST$§!が必要なところ、現在§Y$POWER_AVAILABLE$§!です。"
  CV_ALLOWED_IDEA_GROUPS:0 "利用可能なアイデアグループの数"
  CV_RESEARCHED_GOV_FORM_TOOLTIP:0 "＋ §G$NAME$§!（レベル$LEVEL$）"
  CV_NOTRESEARCHED_GOV_FORM_TOOLTIP:0 "§g－ $NAME$（レベル$LEVEL$）§W"
@@ -2427,7 +2427,7 @@
  SORTIES_TITLE:0 "§Y包囲からの突撃§!"
  SORTIES_DESC:0 "州を保護する守備隊から軍隊を作成するために§Y$COST$§!£mil£を費やします。"
  GARRISON_MODIFIERS:0 "守備隊は以下の補正により毎月§G+$VAL|0$§!増加します"
- POWER_ACTION_SELECT_HEADER:0 "行動を選択してください。§Y$POWER$§!$TYPE$点を使用可能です。"
+ POWER_ACTION_SELECT_HEADER:0 "行動を選択してください。§Y$POWER$§!$TYPE$力を使用可能です。"
  POWER_ACTION_MAKE_CORE:0 "$PROVINCE$を中核州にします。"
  OFFER_NAVALACCTITLE:0 "港湾使用権を提供する"
  NAVALACCTITLE:0 "港湾使用権を要請する"
@@ -2857,8 +2857,8 @@
  QUEUE_CONTAINS:0 "キューに含まれています"
  HAVE_THE_RULER_MODIFIER:0 "統治者補正がある"
  DONT_HAVE_THE_RULER_MODIFIER:0 "統治者補正がない"
- PERSONALITY_IS_NOT:0 "統治者の性格が右記ではない："
- PERSONALITY_IS:0 "統治者の性格が右記である："
+ PERSONALITY_IS_NOT:0 "統治者の個性が右記ではない："
+ PERSONALITY_IS:0 "統治者の個性が右記である："
  AI_MILITARIST:0 "軍国主義者"
  AI_CAPITALIST:0 "資本主義者"
  AI_DIPLOMAT:0 "外交家"
@@ -3110,10 +3110,10 @@
  MILVIEW_SHOW_OUTDATED_UNITS:0 "時代遅れのユニットを表示"
  CD_GIVES_FLEET_ACCESS:0 "$LIST$に港湾使用権を与える。"
  CD_HAS_FLEET_ACCESS:0 "$LIST$に港湾使用権がある。"
- CV_GOVREBELS_CHANGEGOV_STABILITY:0 "変更するには§Y$COST$§!の$TYPE$点がかかります。"
+ CV_GOVREBELS_CHANGEGOV_STABILITY:0 "変更するには§Y$COST$§!の$TYPE$力がかかります。"
  LOAN_INTEREST_DESCRIPTION:0 "我々の現在の利息は以下に基づきます："
  MINIMUM:0 "最小"
- CV_GOVREBELS_STABILITY_CHANGE:0 "安定度の各レベルには、以下の数値が掛けられます"
+ CV_GOVREBELS_STABILITY_CHANGE:0 "安定度はレベルごとに以下の数値が掛けられます"
  CV_GOVREBELS_STABILITY_POSCHANGE:0 "正の安定度の各レベルは以下のような効果を持っています"
  CV_GOVREBELS_STABILITY_NEGCHANGE:0 "負の安定度の各レベルは以下のような効果を持っています"
  CV_GOVREBELS_ENFORCEDEMANDS:0 "§Y要求の強制による影響§!"
@@ -3567,8 +3567,8 @@
  CANCEL_BUILDING_PROGRESS:0 "$PROVINCE$における$BUILDING$の建設を中止してもよろしいですか？投資額の$PERCENTAGE_RETURNED|%1Y$が返還されます。"
  NO_SHIPS_IN_PORT:0 "港に味方の艦船がありません。"
  NO_FRIENDLY_TRANSPORT_SHIPS_IN_PORT:0 "港に味方の輸送船がありません。"
- DISCONNECT_TO_SHIP:0 "§Y輸送船から下船します§!"
- CONNECT_TO_SHIP:0 "§Y輸送船に乗船します§!"
+ DISCONNECT_TO_SHIP:0 "§Y下船§!"
+ CONNECT_TO_SHIP:0 "§Y乗船§!"
  CONNECT_TO_SHIP_DESC:0 "ユニットは港で輸送船に乗ることができます。輸送船が港を離れるとユニットは乗船し出航します。ユニット数が輸送船の輸送能力を超えている場合、部隊は分割され、残りのユニットはとどまります。"
  CONNECT_TO_SHIP_LOCKED:0 "進路の中間点を通過したユニットは輸送船へ乗船できません。"
  natives_american_na:0 "北アメリカ原住民"
@@ -4504,8 +4504,8 @@
  CTPOS_NOT_OUR_PROVINCE:0 "交易所を作成するには、$NAME|Y$を所有し、支配する必要があります。"
  CONFIRCREATETRADEPOST:0 "交易所を作成"
  CONFIRCREATETRADEPOSTTEXT:0 "$NAME$に交易所を作成すると、以下の影響を及ぼします：\n$EFFECTS$"
- CONFIRCREATETRADEPOSTCOST:0 "これには$COST|Y$の$TYPE$点がかかります。"
- CTPOS_DO:0 "交易所の作成は§Y$COST$§!の$TYPE$点が必要であり、以下の影響を及ぼします：\n$EFFECTS$"
+ CONFIRCREATETRADEPOSTCOST:0 "これには$COST|Y$の$TYPE$力がかかります。"
+ CTPOS_DO:0 "交易所の作成は§Y$COST$§!の$TYPE$力が必要であり、以下の影響を及ぼします：\n$EFFECTS$"
  CTPOS_NOTMERCHREPUB:0 "商人共和国のみ、交易所を作成できます。"
  NOT_FOREIGN_HEIR:0 "後継者は外国人ではない"
  HAS_FOREIGN_HEIR:0 "後継者は外国人である"
