--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -160,7 +160,7 @@
  MANAGE_ATTITUDE_CANNOT_ALLY:0 "§R同盟国の外交姿勢の管理を有効にすることはできません。§!"
  MANAGE_ATTITUDE_CANNOT_RIVAL:0 "§Rライバルの外交姿勢の管理を有効にすることはできません。§!"
  BLOCK_OFFENSIVE_WARS_CANNOT_NOT_ALLY:0 "§Rあなたは§Y$COUNTRY$§!と同盟を結んでいません。§!"
- BLOCK_OFFENSIVE_WARS_DESC:2 "このボックスをクリックすることで、§Y$COUNTRY$§!のあなたに対する彼らの攻撃的な戦争への参戦要請を防ぐことができます。しかし、そのようにすることで、好感度の蓄積は止まり、彼らがあなたなしでも管理できると考えれば、同盟を終了する可能性があります。"
+ BLOCK_OFFENSIVE_WARS_DESC:2 "このボックスをクリックすると、§Y$COUNTRY$§!はあなたを攻撃戦争に招集できなくなります。ただし、そうすると好感度が蓄積されなくなり、あなたがいなくてもなんとかなると考えた場合は同盟が終了するかもしれません。"
  INCREASE_TRUST_CANNOT_COST:0 "§R§Y$COUNTRY_ADJ$§!の§Y$PLAYER$§!に対する信頼度を高めるには少なくとも§Y$COST$§!の好感度が必要です。§!"
  INCREASE_TRUST_CANNOT_NOT_ALLY:0 "§Rあなたは§Y$COUNTRY_ADJ$§!の§Y$PLAYER$§!に対する信頼度を高めるには§Y$COUNTRY$§!と同盟を結ぶ必要があります。§!"
  INCREASE_TRUST_TOO_TRUSTY:0 "§R$COUNTRY|Y$はすでに$PLAYER|Y$に対して最高の信頼度を持っています。§!"
@@ -612,8 +612,8 @@
  BUILD_TO_ARMY_DESC:0 "新しい連隊は、あなたが移動させない限り、自動的にこの軍と統合されます。"
  BUILD_TO_ARMY_DESC_NAVY:0 "新しい船は、あなたが移動させない限り、自動的にこの海軍と統合されます。"
  BUILD_TO_ARMY_NAVY_PROTECT_PROFIT:0 "新しい船は、このノードにおける我々の金額を$PROFIT$¤だけ変化させるでしょう。"
- BUILD_TO_ARMY_SHIFT:0 "§YShift§!キーを押したままで、1つではなく§Y5つ§!構築します。"
- BUILD_TO_ARMY_SHIFT_NAVY:0 "§YShift§!キーを押したままで、1隻ではなく§Y5隻§!建造します。"
+ BUILD_TO_ARMY_SHIFT:0 "§YShift§!を押しながらすると、単体ではなく§Y5§!個連隊分増強します。"
+ BUILD_TO_ARMY_SHIFT_NAVY:0 "§YShift§!を押しながらすると、単体ではなく§Y5§!隻分増強します。"
  BUILD_TO_ARMY_SHIFT_NAVY_PROTECT_PROFIT:0 "新しい船は、このノードにおける我々の金額を$PROFIT$¤だけ変化させるでしょう。"
  NO_PROVINCE_TO_BUILD_IN:0 "§R建設に利用できる州はありません。§!"
  BUILD_TO_ARMY_BUSY:0 "§Rユニットを追加しています…§!"
