--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -2978,7 +2978,7 @@
  WEACCMIL_TITLE:0 "軍事通行権を許可"
  WEACCMIL_SETUP:0 "我々が他国に軍事通行権を付与したとき"
  WEACCMIL_HEADER:0 "$MESSENGER$"
- WEACCMIL_1:0 "軍事通行権。"
+ WEACCMIL_1:0 "軍事通行権"
  WEACCMIL_2:0 "$MONARCHTITLE$、我々は"
  WEACCMIL_3:0 "$ACTOR$"
  WEACCMIL_4:0 "我が国への軍事通行権を許可しました。"
@@ -3015,7 +3015,7 @@
  WEDECMIL_TITLE:0 "軍事通行権の拒否"
  WEDECMIL_SETUP:0 "我々が他国への軍事通行権を拒否したとき"
  WEDECMIL_HEADER:0 "$MESSENGER$"
- WEDECMIL_1:0 "軍事通行権。"
+ WEDECMIL_1:0 "軍事通行権"
  WEDECMIL_2:0 "$MONARCHTITLE$、我々は当然のごとく拒否しました。"
  WEDECMIL_3:0 "$ACTOR$からの"
  WEDECMIL_4:0 "軍事通行権の要求をです。"
@@ -3089,7 +3089,7 @@
  WEOFFACCMIL_TITLE:0 "軍事通行権の受諾"
  WEOFFACCMIL_SETUP:0 "我々が他国の軍事通行権の提案を受諾したとき"
  WEOFFACCMIL_HEADER:0 "$MESSENGER$"
- WEOFFACCMIL_1:0 "軍事通行権。"
+ WEOFFACCMIL_1:0 "軍事通行権"
  WEOFFACCMIL_2:0 "$MONARCHTITLE$、我々の強大な軍隊を恐れて"
  WEOFFACCMIL_3:0 "$ACTOR$が"
  WEOFFACCMIL_4:0 "我々に提供した軍事通行権について、我々は受諾することを決めました。"
@@ -3126,7 +3126,7 @@
  WEDECOFFMIL_TITLE:0 "軍事通行権の拒否"
  WEDECOFFMIL_SETUP:0 "我々が他国の軍事通行権の提案を拒否したとき"
  WEDECOFFMIL_HEADER:0 "$MESSENGER$"
- WEDECOFFMIL_1:0 "軍事通行権。"
+ WEDECOFFMIL_1:0 "軍事通行権"
  WEDECOFFMIL_2:0 "$MONARCHTITLE$、我々は"
  WEDECOFFMIL_3:0 "$ACTOR$からの"
  WEDECOFFMIL_4:0 "我が軍の駐留の申し出は価値がないと判断しました。"
