--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -854,7 +854,7 @@
  SUPPORT_LOYALISTS:0 "体制派への支援"
  NO_EXPENSE_SUPPORT_LOYALISTS:0 "どこにおいても体制派を支援していません。"
  ENABLE_X:0 "$X$の有効化"
- DISABLE_X:0 "$X$を無効化"
+ DISABLE_X:0 "$X$の無効化"
  ENDED_X:0 "$X$を終了"
  CV_INFLATION_FROM_TRADE_COMPANIES:0 "交易会社での投資の促進は、年間のインフレを$VAL|Y$増加させます。"
  subject_interaction_events.1.t:0 "僭称者[Root.Monarch.GetTitle]の台頭"
@@ -1589,7 +1589,7 @@
  SIEGE_CAPABILITY_DESC:0 "防御側の守備隊の規模の補正に応じて、実際に包囲できる要塞レベルはこれよりも低くなることがあります。"
  LOOT_CAPABILITY:0 "この軍からの月間最大略奪量"
  LOOT_CAPABILITY_DESC:0 "州内に残っている戦利品の量や他の略奪しているユニットの存在に応じて、実際の略奪量はこれよりも低くなることがあります。"
- UNIT_LOOT_EXPLANATION:0 "$COUNT$の$UNIT$連隊は$VAL|Y$ごとに§G$LOOT$§!を略奪しています。"
+ UNIT_LOOT_EXPLANATION:0 "$UNIT$$COUNT$個連隊は$VAL|Y$ごとに略奪 = §G$LOOT$§!"
  CUSTOMIZE_SUBJECT:0 "従属国の名称、国旗、色をカスタマイズ"
  CUSTOMIZE_SUBJECT_LIGHT:0 "従属国の名称をカスタマイズ"
  CUSTOMIZE_SUBJECT_TITLE:0 "従属国のカスタマイズ"
@@ -1625,7 +1625,7 @@
  SUBJECT_INTERACTIONS:0 "従属国との相互作用"
  NO_SUBJECT_INTERACTIONS:0 "§R可能な相互作用を持つ従属国がありません。§!"
  INTERACTIONS:0 "相互作用"
- MOTHBALL_ALL:0 "全要塞を無効化"
+ MOTHBALL_ALL:0 "要塞をすべて使用停止にする"
  ACTIVATE_ALL:0 "全要塞を有効化"
  NO_FORTS:0 "要塞を持っていません。"
  ALL_MOTHBALLED:0 "すでにすべての要塞が使用停止になっています。"
@@ -1671,10 +1671,10 @@
  GOVERNMENT_EFFECTS_DUE_TO_DUCHY_RANK:0 "政府ランク§Y公国§!にはボーナスがありません。"
  CANNOT_UPGRADE_RANK_FIXED_RANK:1 "§R- 政府改革$REFORM|Y$により現在の政府ランクを変えることができません。§!\n"
  CANNOT_UPGRADE_RANK_FIXED_RANK_GENERIC:0 "§R- 現在の政府ランクを変えることはできません。§!\n"
- RR_SUPPRESSION_CAPABILITY:1 "§Y州の不穏度の減少§!"
- RR_SUPPRESSION_CAPABILITY_DESC:1 "州に駐留しているユニットによる不穏度の減少：$BASE|G$\n州の不穏度は$MAX_UNREST_REDUCTION|G$を超えることはありません。"
- BUILDING_SLOTS_AT_LEAST:1 "建築物スロットの残りが§Y$VALUE$§!以上である。"
- BUILDING_SLOTS_LESS_THAN:1 "建築物スロットの残りが§Y$VALUE$§!未満である。"
+ RR_SUPPRESSION_CAPABILITY:1 "§Y州の不穏度削減§!"
+ RR_SUPPRESSION_CAPABILITY_DESC:1 "州に駐留しているユニットによる不穏度減少：$BASE|G$\n不穏度は、州ごとに$MAX_UNREST_REDUCTION|G$以上減少することはありません。"
+ BUILDING_SLOTS_AT_LEAST:1 "残り建築物スロットが§Y$VALUE$§!以上である。"
+ BUILDING_SLOTS_LESS_THAN:1 "残り建築物スロットが§Y$VALUE$§!未満である。"
  desc_si_scutage_unwilling_vassals:0 "最近、軍役代納金を超えた多くの従属があり、期待されている金のすべてが我々の国庫にその道を見出すわけではないことが明らかとなった…"
  MP_DISABLED_NO_STEAM:0 "マルチプレイヤー機能にアクセスするにはSteamを起動してください。"
  MP_DISABLED_NO_PDX_LOGIN:0 "マルチプレイヤー機能にアクセスするにはParadoxアカウントにログインしてください。"
