--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -247,7 +247,7 @@
  PAPAL_STATE_NO_INFLUENCE:0 "教皇は教皇への影響力や枢機卿を得ない代わりに教皇の支配者になるためになされた投資を枢機卿の総数に基づいて得ます。"
  EXPENSEDIPLOMATIC:0 "外交費"
  NO_EXPENSESUPPORTREBELS:0 "反乱軍を支援するための経費を持っていません。"
- WAR_OVERVIEW_NOT_FULL_ALLY:0 "§Y$COUNTRY$§!はこの戦争において共戦国ではない。そのため彼らから州を奪う場合、2倍の戦勝点コストがかかる。"
+ WAR_OVERVIEW_NOT_FULL_ALLY:0 "§Y$COUNTRY$§!はこの戦争において共戦国ではないため、彼らから州を奪う場合、2倍のコストがかかります。"
  WAR_OVERVIEW_LEADER_NOT_DEMAND:0 "リーダーは平和を要求しないかもしれない"
  WAR_OVERVIEW_LEADER_NOT_DEMAND_DESC:0 "リーダーは、平和の取り決めで私たちのために州を授与することはできません。"
  WAR_OVERVIEW_NO_PEACE:0 "私たちは$COUNTRY$と個別和平の交渉をすることはできません。"
