--- a/source/localisation/scandinavia_l_english.yml
+++ b/source/localisation/scandinavia_l_english.yml
@@ -4167,7 +4167,7 @@
  fin_if_cultural_union_tt:0 "§Y文化連合§!を行ってミッションを達成した場合："
  fin_iron_copper_prod_tt:0 "§Y銅§!または§Y鉄§!の生産から"
  fin_every_province_with_workshop_tt:0 "\n§Y生産§!系の建造物があり、§Y魚§!または§Y穀物§!である領有州はすべて、基礎生産が§G1§!増加"
- fin_every_adm_advisor_grants_5_tax_per_level:0 "新しい§Y統治顧問§!全員に1レベルにつき§G+5%§!の国家税補正が付与されます。"
+ fin_every_adm_advisor_grants_5_tax_per_level:0 "新しい§Y統治顧問§!全員に1レベルにつきの国家税補正が§G+5%§!されます。"
  fin_remove_modifier_upon_siege_tt:0 "敵軍が砦の防御を破るまで"
  fin_current_ruler_rome_tt:0 "[Root.Monarch.GetName]は、「§Yローマの真の後継者§!」として知られるようになり、その在位期間中、自国に強力な§Y補正§!を付与します"
  fin_ruler_celebrated_as_independence_tt:0 "[Root.Monarch.GetName]の功績を称え、その§Y功績§!の大きさに応じて§Y変動する§!報酬を獲得します。"
